<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choix_du_profil"
    android:background="@drawable/background1">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/teacher"
        android:layout_width="210dp"
        android:layout_height="190dp"
        android:clickable="true"
        android:contentDescription="@string/image_description1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/teacher_icon" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/student"
        android:layout_width="292dp"
        android:layout_height="230dp"
        android:clickable="true"
        android:contentDescription="@string/image_description2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/student_icon" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/admin"
        android:layout_width="247dp"
        android:layout_height="218dp"
        android:clickable="true"
        android:contentDescription="@string/image_description3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/administration_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="45dp"
        android:text="Select Your Profile Type:"
        android:textColor="@color/app_color"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="123dp"
        android:layout_height="34dp"
        android:text="Teacher"
        android:textColor="@color/button_color"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="123dp"
        android:layout_height="34dp"
        android:text="Student"
        android:textColor="@color/button_color"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:text="administration"
        android:textColor="@color/button_color"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />


</androidx.constraintlayout.widget.ConstraintLayout>